Use lighter shade of blue

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       }
 
       .logo {
-        color: #1f3b82;
+        color: #3e599c;
         font-size: 0.75rem;
         display: flex;
         justify-content: center;
