Add link to latest video

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
       .recordings {
         margin-bottom: 3rem;
       }
+
+      li {
+        margin-bottom: 0.5rem;
+      }
     </style>
   </head>
   <body>
@@ -99,19 +103,27 @@
         </p>
       </div>
       <p>
-        Posnetki preteklih srečanj:
+        Teme preteklih srečanj:
       </p>
       <ul class="recordings">
         <li>
+          <a href="https://www.youtube.com/watch?v=A6Sa7KuWiSE"
+          ><b>[2024-04-05]</b> Metaprogramiranje v Rubyju</a>
+        </li>
+        <li><b>[2024-03-01]</b> Parse, don't validate</li>
+        <li><b>[2024-02-02]</b> Delo recruiterja v podjetju Povio</li>
+        <li>
           <a
             href="https://www.youtube.com/watch?v=qfFQCz3w5tg"
-          >12. 1. 2024 - Zakaj bi uporabljal Deno</a>
+          ><b>[2024-01-12]</b> Zakaj bi uporabljal Deno</a>
         </li>
         <li>
           <a
             href="https://www.youtube.com/watch?v=Jwa15wNwg2E"
-          >1. 12. 2023 - Uvod v Kubernetes</a>
+          ><b>[2023-12-01]</b> Uvod v Kubernetes</a>
         </li>
+        <li><b>[2023-11-03]</b> Lua in LÖVE na primeru majhne igre</li>
+        <li><b>[2023-10-06]</b> Kako zelo uspešno voditi solo projekt</li>
       </ul>
     </div>
     <script>
