Add two more videos

--- a/index.html
+++ b/index.html
@@ -107,6 +107,14 @@
       </p>
       <ul class="recordings">
         <li>
+          <a href="https://www.youtube.com/watch?v=nXEQWZlhv-o"
+          ><b>[2024-06-10]</b> Kako so Žanu Mahniču zrasli brki</a>
+        </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=WunB3sPofKk"
+          ><b>[2024-05-10]</b> Product Engineering s TypeScriptom</a>
+        </li>
+        <li>
           <a href="https://www.youtube.com/watch?v=A6Sa7KuWiSE"
           ><b>[2024-04-05]</b> Metaprogramiranje v Rubyju</a>
         </li>
