--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       display: flex;
       justify-content: center;
       margin: 3rem 0;
-      font-weight: bold;
+      font-weight: 900;
     }
 
     ul,
@@ -63,6 +63,10 @@
 
     li {
       margin-bottom: 0.5rem;
+    }
+
+    b {
+      font-weight: 900;
     }
   </style>
 </head>
