Link to newest video

--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
     </p>
     <ul class="recordings">
       <li>
+        <a href="https://www.youtube.com/watch?v=BNY4U7FMveo"><b>[2024-11-08]</b> Indie hacking</a>
+      </li>
+      <li>
         <a href="https://www.youtube.com/watch?v=PAptKSlkptc"><b>[2024-10-11]</b> Tailscale za domačo uporabo</a>
       </li>
       <li>
