--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
     </p>
     <ul class="recordings">
       <li>
+        <a href="https://www.youtube.com/watch?v=3VY9EdppDz4"><b>[2025-01-10]</b> Deployanje v produkcijo s Kamalom</a>
+      </li>
+      <li>
         <a href="https://www.youtube.com/watch?v=BNY4U7FMveo"><b>[2024-11-08]</b> Indie hacking</a>
       </li>
       <li>
