Add latest recording

--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
     </p>
     <ul class="recordings">
       <li>
+        <a href="https://www.youtube.com/watch?v=JI3wYUbPc0Y"><b>[2025-03-14]</b> Programiranje industrijskih robotov
+          Kuka</a>
+      </li>
+      <li>
         <a href="https://www.youtube.com/watch?v=sXQHiZzaa-c"><b>[2025-02-07]</b> Majhen internet</a>
       </li>
       <li>
