Add latest recording on charcuterie.py

--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
     </p>
     <ul class="recordings">
       <li>
+        <a href="https://www.youtube.com/watch?v=pyLHDYqGZKg"><b>[2025-04-04]</b> Izdelava klobas s Pythonom</a>
+      </li>
+      <li>
         <a href="https://www.youtube.com/watch?v=JI3wYUbPc0Y"><b>[2025-03-14]</b> Programiranje industrijskih robotov
           Kuka</a>
       </li>
