Add two new recordings

--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
     </p>
     <ul class="recordings">
       <li>
+        <a href="https://www.youtube.com/watch?v=5Z4_oGD_j1g"><b>[2025-12-09]</b> Oddajanje evidence DDV po novem sistemu</a>
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=2ctbd4kIBDo"><b>[2025-05-16]</b> Instantni backend po mojem okusu</a>
+      </li>
+      <li>
         <a href="https://www.youtube.com/watch?v=pyLHDYqGZKg"><b>[2025-04-04]</b> Izdelava klobas s Pythonom</a>
       </li>
       <li>
